fixes squashed swatches on smaller viewports

--- a/app/components/metatip/metatip.element.css
+++ b/app/components/metatip/metatip.element.css
@@ -118,9 +118,12 @@
   font-family: 'Dank Mono', 'Operator Mono', 'Inconsolata', 'Fira Mono', 'SF Mono', 'Monaco', 'Droid Sans Mono', 'Source Code Pro', monospace;
 }
 
-:host [value] {
+:host [value], 
+:host [local-change] {
   color: var(--theme-text_color);
-  display: inline-flex;
+  display: inline-grid;
+  grid-auto-flow: column;
+  gap: .5em;
   align-items: center;
   justify-content: flex-end;
   text-align: right;
@@ -145,9 +148,9 @@
   top: 1px;
   display: inline-block;
   width: 1em;
+  min-width: 1em;
   height: 1em;
   border-radius: 50%;
-  margin-right: .5em;
 }
 
 :host [local-modifications] {
